1. Redimensionnement, compression, renommage des images; 2. Compression ressources textuelles; 3. Amélioration contraste boutons filtre portfolio; 4. Ajout titre et langue à la page; 5. Corrections titres et sémantique

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,9 +90,11 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
+/* Mise en commentaire de #gallery {} car min-height déjà en commentaire */
+/* #gallery { */
 	/*	min-height: 100vh; */
-}
+/* } */
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -101,12 +103,14 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	/* color: #fff; */
+	color:#000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+	cursor: pointer;
 }
 .item-column {
 	position: relative;
@@ -243,6 +247,23 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+
+/* Ajout styles pour footer */
+footer {
+	background-color: #1c6474;
+	padding-block: 2em;
+	color: white;
+	text-align: center;
+	p {
+	  a {
+		color: white;
+	  }
+	}
+  }
+
+  .nom-footer {
+	font-weight: 900;
+  }
 
 @media all and (max-width: 1180px) {
 	.picture {
